--- a/src/components/TrainingCard.module.scss
+++ b/src/components/TrainingCard.module.scss
@@ -1,23 +1,25 @@
+@import '../variables.scss';
+
 .wrapper {
-    position: fixed;
+    position: absolute;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    top: 5%;
+    transform: translateX(-50%);
     width: 80%;
     border: 2px solid black;
-    min-height: 70%;
-    background-color: teal;
-    animation: appear 0.4s linear;
+    min-height: 80vh;
+    @include background-gradient;
+    animation: appear 0.3s linear;
 }
 
 .overlay {
     width: 100%;
-    height: 100vh;
-    position: fixed;
+    min-height: 100vh;
+    position: absolute;
     left: 0;
     top: 0;
     background-color: #1b1b1bdc;
-    animation: appear 0.4s linear;
+    animation: appear 0.3s linear;
 }
 
 
