--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,7 +6,7 @@
 
 @mixin background-gradient {
     background: rgb(6, 7, 11);
-    background: linear-gradient(114deg, rgba(6, 7, 11, 1) 18%, rgba(45, 60, 72, 1) 79%);
+    background: linear-gradient(114deg, rgb(149, 150, 151) 18%, rgba(45, 60, 72, 1) 79%);
 
 }
 
